<resources>
    <string name="app_name">Hey Shift</string>
    <string name="app_sub_header">Your Navigation AI chatbot</string>
    <string name="new_chat">New Chat</string>
    <string name="profile">Profile</string>
    <string name="chats">Chats</string>
    <string name="menu">Menu</string>

    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

    <string name="messagebox_ph">Ask anything…</string>
    <string name="messagebox_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>